--- a/src/styles/components/_bottom-container.scss
+++ b/src/styles/components/_bottom-container.scss
@@ -19,6 +19,7 @@
   pointer-events: none;
   z-index: $z-legend;
   gap: $spacing-md;
+  isolation: isolate;
 
   @include md {
     padding: $spacing-sm;
