--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -369,8 +369,11 @@
   
   &:hover {
     background: rgba(255, 255, 255, 0.25);
-    transform: scale(1.05);
     border-color: rgba(255, 255, 255, 0.5);
+    
+    @media (min-width: 769px) {
+      transform: scale(1.05);
+    }
   }
   
   &:active {
