--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,4 @@
 @use 'components/weather-alerts';
 @use 'components/alert-detail-panel';
 @use 'components/city-search-modal';
+@use 'components/static-pages';
