--- a/src/styles/components/_weather-map.scss
+++ b/src/styles/components/_weather-map.scss
@@ -9,8 +9,8 @@
 
 .weather-map-container {
   width: 100%;
-  height: 100vh;
-  height: 100dvh;
+  min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   position: relative;
