--- a/src/styles/components/_alert-detail-panel.scss
+++ b/src/styles/components/_alert-detail-panel.scss
@@ -15,7 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10001;
+  z-index: $z-modal-strong;
   padding: $spacing-lg;
 
   @include md {
