--- a/src/styles/components/_weather-map.scss
+++ b/src/styles/components/_weather-map.scss
@@ -156,12 +156,12 @@
 
 .weather-grid {
   display: grid;
-  grid-template-columns: 320px 1fr;
+  grid-template-columns: minmax(240px, 1fr) minmax(0, 2fr);
   gap: 1rem;
   align-items: start;
 
   @include lg {
-    grid-template-columns: 280px 1fr;
+    grid-template-columns: minmax(220px, 1fr) minmax(0, 2fr);
   }
 
   @include md {
